--- a/public/partials/game-view.html
+++ b/public/partials/game-view.html
@@ -3,7 +3,7 @@
   <div class="game-view-background"></div>
   <div class="container">
     <div class="row justify-content-center">
-      <h1>games list</h1>
+      <h1>Games List</h1>
     </div>
 
     <!-- repeat games, cards -->
