--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -34,5 +34,5 @@
     </div>
   </form>
   <!-- signup button -->
-  <a ng-click="main.changeInclude('signup')">new to wasd.it? <span>signup</span></a>
+  <a ng-click="main.changeInclude('signup')">new to wasd? <span>signup</span></a>
 </div>  <!-- /.session-login -->
