--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -1,22 +1,22 @@
 <!-- navbar -->
 <nav class="navbar fixed-top navbar-expand-md navbar-dark">
-  <a ng-click="main.changeInclude('header')" class="navbar-brand" href="#">WASD.it</a>
+  <h1 ng-click="main.changeInclude('header')" class="navbar-brand">WASD</h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a ng-click="main.changeInclude('header')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">home</a>
+        <a ng-click="main.changeInclude('header')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Home</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('game-view')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">games</a>
+        <a ng-click="main.changeInclude('game-view')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Games</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('about')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">about</a>
+        <a ng-click="main.changeInclude('about')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">About</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('contact')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">contact</a>
+        <a ng-click="main.changeInclude('contact')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav">
@@ -26,18 +26,18 @@
           {{main.currentUser}}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a ng-click="main.changeInclude('profile'); main.getUserCreatedGames()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">profile</a>
-              <a ng-click="main.changeInclude('create')" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">add game</a>
+              <a ng-click="main.changeInclude('profile'); main.getUserCreatedGames()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Profile</a>
+              <a ng-click="main.changeInclude('create')" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Add Game</a>
             <div class="dropdown-divider"></div>
-              <a ng-click="main.changeInclude('header'); main.logout()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">logout</a>
+              <a ng-click="main.changeInclude('header'); main.logout()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Logout</a>
         </div>
       </li>
       <!-- signup / login -->
       <li ng-if="main.showNavItem" class="nav-item">
-        <a ng-click="main.changeInclude('signup')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">signup</a>
+        <a ng-click="main.changeInclude('signup')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Signup</a>
       </li>
       <li ng-if="main.showNavItem" class="nav-item">
-        <a ng-click="main.changeInclude('login')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">login</a>
+        <a ng-click="main.changeInclude('login')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">Login</a>
       </li>
     </ul>
   </div>
