fixed modal sorting

--- a/public/partials/game-view.html
+++ b/public/partials/game-view.html
@@ -57,7 +57,7 @@
     </div> <!-- /ng-repeat game cards-->
 
     <!-- repeat games, modal -->
-    <div ng-repeat="games in main.allGames" class="modal fade" id="game{{$index}}" tabindex="-1" role="dialog" aria-labelledby="gameIndexModal" aria-hidden="true">
+    <div ng-repeat="games in main.allGames | orderBy : 'title'" class="modal fade" id="game{{$index}}" tabindex="-1" role="dialog" aria-labelledby="gameIndexModal" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <!-- modal header -->
